--- a/app/src/AndroidManifest.xml
+++ b/app/src/AndroidManifest.xml
@@ -16,7 +16,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name="com.example.login.LoginActivity"
+            android:name="LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.login.model.SecondActivity" />
+        <activity android:name="SecondActivity" />
 
 
     </application>
